--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+sunsetcoastna.keystore
+sunsetcoastna1.keystore
+sunsetcoastna2.keystore
